# WASP2

./: .dockerignore  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  ACCOMPLISHMENTS_SESSION_2025-11-25.md  AGENTS.md  BAMCOUNTER_THREADING_OPTIMIZATION.md  BASELINE_SETUP_STATUS.md  BENCHMARK_DATASETS_PLAN.md  BIOLOGICAL_VALIDATION.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLEANUP_VALIDATION_REPORT.md  CODE_OF_CONDUCT.md  COMPILATION_FIX_NEEDED.md  CONTRIBUTING.md  CRITICAL_REVIEW_SIMULATION_APPROACH.md  DEAD_CODE_CLEANUP_PLAN.md  DEVELOPMENT.md  DOCS_DAG_PLAN.md  Dockerfile  Dockerfile.optimized  ENGINEERING_PLAN.md  EXAMPLE_STATISTICAL_OUTPUT.md  EXISTING_ASE_SIMULATORS.md  EXISTING_VALIDATION_SUMMARY.md  FIGURE_GENERATION_SUMMARY.txt  GM12878_REPROCESSING_PLAN.md  GROUND_TRUTH_EXPLAINED.md  HOW_TO_VERIFY_IT_WORKS.md  INDEL_FINAL_STATUS.md  INDEL_IMPLEMENTATION_COMPLETE.md  INDEL_IMPLEMENTATION_SUMMARY.md  INDEL_VALIDATION_PLAN.md  LICENSE  MANIFEST.in  (+75 more)
.claude/: settings.json
.devcontainer/: README.md  devcontainer.json  setup.sh
.github/: CICD.md  CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: audit-finding.yml  config.yml  scientific-validation.yml
.github/runner/: README.md  com.github.actions.runner.plist  install-service.sh  watchdog.sh
.github/workflows/: benchmarks.yml  bot-status.yml  build.yml  ci.yml  codeql.yml  containers.yml  dependabot-auto-merge.yml  docker.yml  docs.yml  ecosystem.yml  lint.yml  nf-lint.yml  nightly.yml  publish.yml  release.yml  rust-build.yml  security.yml  stale-branches.yml  stale.yml  test.yml  tests.yml  velocity-bot.yml
agents/: AGENT_1_COMPREHENSIVE.md  AGENT_2_PAIRED_END.md  AGENT_3_GATK_COMPARE.md  AGENT_4_METRICS_FIGURES.md  BENCHMARK_V3_AGENT_A_SIMULATOR.md  BENCHMARK_V3_AGENT_B_GATK.md  BENCHMARK_V3_AGENT_C_PHASER.md  BENCHMARK_V3_AGENT_D_BIASTOOLS.md  BENCHMARK_V3_AGENT_E_METRICS.md
analysis/: analysis_bench.csv  counting_bench.csv  create_publication_figure.py  mapping_filter_bench.csv  run_analysis_bench.py  run_counting_bench.py  run_mapping_filter_bench.py
audits/: 200-test-suite-quality.md  203-nextflow-pipelines-audit.md
baselines/: PIPELINE_EXECUTION_PLAN.md  pipeline_metadata.txt
baselines/analysis/: ai_results_head20.txt  memory_profile.txt
baselines/counting/: counts_head20.txt  memory_profile.txt
baselines/mapping/: expected_counts.json
benchmarking/: .gitignore  BENCHMARK_SUMMARY.md  BIASTOOLS_ENGINEERING_PLAN.md  README.md  __init__.py  analyze_snv_vs_indel.py  benchmark_scaling_rust.sh  benchmark_scaling_rust_indels.sh  benchmark_unified_scaling.sh  benchmark_unified_scaling_indels.sh  combine_unified_indel_scaling.py  combine_unified_scaling.py  comprehensive_benchmark.py  environment.yml  nature_methods_benchmark.sh  plot_all_versions.py  plot_comparison.py  plot_indel_comparison.py  plot_star_wasp_comparison.py  qsub_finalize_figure1_reruns.sh  run_15m_unified_benchmark.sh  run_15m_unified_benchmark_indels.sh  run_benchmarks.py  run_phaser_1thread.sh  run_phaser_benchmark.sh  sge_15m_unified.sh  sge_15m_unified_indels.sh  sge_benchmark_rust.sh  sge_benchmark_rust_indels.sh  sge_nature_methods.sh  sge_star_wasp_unified.sh  sge_wasp1_benchmark.sh  utils.py  wait_and_combine_indel_scaling.sh  wait_and_combine_scaling.sh
benchmarking/data/: .gitkeep
benchmarking/dev_harness/: README.md  __init__.py  compare_subset.py  thread_sweep.py
benchmarking/quickbench/: README.md  (+4 more)
benchmarks/: benchmark_variant_io.py  benchmark_vcf_performance.py
bioconda/: README.md  meta.yaml
bioconda-recipe/: README.md  build.sh  meta.yaml
docs/: ARCHITECTURE.md  AUDITOR_GUIDE.md  AUDIT_CHECKLIST.md  CI_CD_BEST_PRACTICES.md  CONTAINER_USAGE.md  DEPENDENCIES.md  DIRECTORY_STRUCTURE.md  DOCKER_BEST_PRACTICES_2025.md  DOCUMENTATION_CHECKLIST.md  DOCUMENTATION_PLAN.md  IMPLEMENTATION_TEMPLATES.md  PHASE2_TASK_DAG.md  PLINK2_INTEGRATION_DESIGN.md  RUST_BENCHMARKS.md  SELF_HOSTED_RUNNERS.md  VCF_PERFORMANCE.md  WASP2_ECOSYSTEM.md  requirements.txt
figures/: FIGURE_SUMMARY.md  GENERATION_COMPLETE.txt  LATEX_TEMPLATE.tex  QUICK_REFERENCE.txt  README.md  figure_generation_report.txt  supplementary_table_S1.csv
paper/: ANALYSIS_SUMMARY_FOR_PI.md  DATA_VALIDATION_REPORT.md  EXPERIMENT_VALIDATION_REPORT.md  FIGURE_ENGINEERING_PLAN.md  README.md  STATISTICAL_ENGINEERING_REPORT.md  config.py  figure_gallery.html  run_all.sh
pipelines/: README.md
podcast/: enhance_audio.py  generate_audio.py  index.html  manifest.yml
rust/: ALLELE_SWAPPING_IMPLEMENTATION.md  AUDIT.md  BUILD_SETUP.md  Cargo.toml  IMPLEMENTATION_PROGRESS.md  PARSER_IMPLEMENTATION_COMPLETE.md  README.md  SESSION_SUMMARY.md
rust/.cargo/: config.toml
rust/benches/: mapping_filter_bench.rs
rust/src/: analysis.rs  bam_counter.rs  bam_counter_sc.rs  bam_filter.rs  bam_intersect.rs  bam_remapper.rs  cigar_utils.rs  lib.rs  mapping_filter.rs  multi_sample.rs  read_pairer.rs  seq_decode.rs  unified_pipeline.rs  vcf_to_bed.rs
scripts/: benchmark_docker_build.sh  check-version-consistency.sh  container_smoke_test.sh  create_sanity_data.sh  generate_publication_figures.py  preview_figures.sh  release_version.py  run_baseline.sh  run_full_pipeline_baseline.sh  setup-mac-runner.sh  setup-multi-runners.sh  setup_dev_env.sh  smoke_test.sh  validate_against_baseline.sh  validate_release.sh
simulation/: README.md  benchmark_vs_gatk.py  create_ground_truth_from_vcf.py  simulate_paired_end_ase.py
src/: wasp2_rust.pyi
test_data/: NA12878_snps_chr10.bed  README.md  as_counts.txt
tests/: __init__.py  conftest.py  test_cli.py  test_extension_version.py  test_indel_correctness.py  test_rho_clamping.py  test_rust_bam_filter.py  test_rust_python_counting_parity.py  test_rust_python_match.py  test_validation_quick.py
tutorials/: atac_seq_workflow.ipynb  performance_optimization.ipynb  quickstart_counting.ipynb  quickstart_mapping.ipynb  rna_seq_workflow.ipynb  single_cell_workflow.ipynb
validation/: .gitignore  README.md  compare_to_baseline.py  generate_baselines.py  generate_mapping_data.py
(+854 files in other folders)
